--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <h1> I am good </h1>
 <h1> this line is a added as a part of feature1 and push it to the central repostary </h1>
 <h1> this line is a added as a part of feature2 and pull it to the local repostary </h1>
+<h1> this is a part of feature branch </h1>
